# MCP_PUCH

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: keep-alive.yml
batemanMusic/: .gitignore
batemanMusic/scripts/: app.py  combineAudioVideo.sh  generateVideoSpotify.sh  generateVideoUserUpload.sh  generateVideoYTMusic.sh  generateVideoYouTube.sh  spotify_thumbnail.py  youtube_thumbnail.py  ytmusic_thumbnail.py
mcp-bearer-token/: .env.example  youtube_gemini.py
music-memes/: .gitignore  app.py  maker.py  meta.json  music_memes_mcp.py  pcp.py  spotify_thumbnail.py  test_platforms.py  youtube_thumbnail.py  ytmusic_thumbnail.py
music-memes/tutorial/with mask/: mask step1-drag layer.webm  mask step2-offset00.webm  mask step3-transformation_matrix.webm  mask step4-add mask.webm  mask step5-adjust_mask.webm  mask step6-save_mask.webm
music-memes/tutorial/without mask/: step1-drag layer.webm  step2-offset00.webm
